# Advanced-Information-Retrieval-2024

./: .gitignore  pyproject.toml
notebooks/: demo.ipynb
