[tool.poetry]
name = "advanced-information-retreival"
version = "0.1.0"
description = ""
authors = ["custibor99 <cus.tibor@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.4"
numpy = "^1.26.4"
seaborn = "^0.13.2"
pandas = "^2.2.1"
torch = {version = "^2.2.2+cpu", source = "pytorch_cpu"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
